# django-sesame

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  AUTHORS  CHANGELOG.rst  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: Makefile  changelog.rst  conf.py  contributing.rst  faq.rst  howto.rst  index.rst  quickstart.rst  reference.rst  requirements.txt  spelling_wordlist.txt  topics.rst  tutorial.rst
docs/_static/: custom.css
docs/howto/: faq.rst  index.rst  max-age.rst  outside-views.rst  per-view.rst  scope.rst
docs/topics/: index.rst  keys.rst  lifecycle.rst  low-level.rst  safari.rst  security.rst  stateless.rst  tokens.rst
docs/tutorial/auth_links/: admin.py  models.py  share_booking.html  views.py  views_decorator.py  views_generic.py  views_generic_decorator.py
docs/tutorial/email_login/: email_login.html  email_login_success.html  forms.py  views.py
logo/: github-social-preview.html
sesame/: backends.py  compat.py  compatibility.py  middleware.py  models.py  packers.py  pk_packers.py  settings.py  test_backends.py  test_middleware.py  test_mixins.py  test_packers.py  test_settings.py  test_signals.py  test_tokens.py  test_urls.py  test_utils.py  tests.py  utils.py
sesame/test_app/: models.py
sesame/test_project/: settings.py
sesame/tests/: __init__.py  backends.py  middleware.py  settings.py  urls.py  utils.py
src/sesame/: backends.py  decorators.py  middleware.py  packers.py  settings.py  tokens.py  tokens_v1.py  tokens_v2.py  utils.py  views.py
tests/: mixins.py  settings.py  signals.py  test_backends.py  test_decorators.py  test_middleware.py  test_packers.py  test_settings.py  test_tokens.py  test_tokens_v1.py  test_tokens_v2.py  test_utils.py  test_views.py  urls.py  views.py
urlauth/: backends.py  middleware.py  utils.py
urlauth/tests/: __init__.py  backends.py  middleware.py  settings.py  utils.py
