[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source = ["sesame", "tests"]

[tool.isort]
profile = "black"

[tool.poetry]
name = "django-sesame"
version = "3.1"
description = """\
    Frictionless authentication with "Magic Links" \
    for your Django project."""
license = "BSD-3-Clause"
authors = ["Aymeric Augustin <aymeric.augustin@m4x.org>"]
readme = "README.rst"
repository = "https://github.com/aaugustin/django-sesame"
documentation = "https://django-sesame.readthedocs.io/"
keywords = ["authentication", "token-based-authentication"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]
packages = [
    { include = "sesame", from = "src" },
]

[tool.poetry.dependencies]
django = ">=3.2"
python = ">=3.6.2"
ua-parser = { version = ">=0.15", optional = true }

[tool.poetry.dev-dependencies]
black = "*"
coverage = "*"
flake8 = "*"
furo = "*"
isort = "*"
sphinx = "*"
sphinx-autobuild = "*"
sphinx-copybutton = "*"
sphinxcontrib-spelling = { version = "*", optional = true }
toml = "*"

[tool.poetry.extras]
ua = ["ua-parser"]
